src/app/main/accounts/home/accounts-home.component.scss
@import '~@angular/material/theming';
.application-layout-content-wrapper {
  padding: 12px;

}

.mat-sidenav-container-account-home {
  background-color: transparent;
  position: absolute;
  height: calc(100% - 30px);
  width: calc(100% - 16px);
  padding: 8px;


  .mat-sidenav-filters {
    top: 70px;
    bottom: 8px;
    @include mat-elevation(3);
    .accounts-filters {

      height: 100%;
      border-style: solid;
      border-width: 4px;
      border-top: 0;
      border-bottom: 0;
      border-right: 0;
      padding: 24px;
      overflow: auto;

      .label-balance {
        font-size: 14px;
      }
    }
  }


  .mat-drawer-content {
    overflow: hidden;
  }

  .mat-sidenav-content {
    flex-direction: column;
    .buttons {
      margin-left: 40px;

      button {
        margin-right: 12px;
      }
    }

    .flex-container {
      overflow: auto;
      margin-top: 30px;
      margin-left: 40px;

      .fill-remaining {
        width: 100%;

        .list-accounts {
          width: 100%;

          .o-list-container {

            .mat-list {
              padding: 0;

              @media (min-width: 1400px) {
                .mat-card {
                  width: 75%;
                }
              }

              @media (min-width: 1700px) {
                .mat-card {
                  width: 75%;
                }
              }

              .o-list-item.mat-card {
                @include mat-elevation(3);
                margin-bottom: 20px;
                margin-top: 0;

                label,
                span {
                  text-overflow: ellipsis;
                  white-space: nowrap;
                  overflow: hidden;
                  font-size: 14px;
                  padding: 6px 0;
                }

                label {
                  font-weight: 500;
                }

                .info-iban {

                  label,
                  span {
                    font-size: 18px;
                  }
                }

                .info-account {
                  &.border-right {
                    border-right-style: solid;
                    border-right-width: 1.5px;
                  }

                  &.border-bottom {
                    padding: 8px 0;
                    border-bottom-style: solid;
                    border-bottom-width: 1.5px;
                  }
                }

                .balance-account {

                  label,
                  span {
                    padding-top: 12px;
                    font-size: 18px;
                    padding-bottom: 0;
                  }

                  span.date {
                    font-size: 12px;
                  }
                }
              }
            }
          }
        }
      }
    }
  }
}

